<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
	<!-- 线索语言交互推荐 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
		<!-- 通话语音交互分析推荐 -->
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="makeAPhoneCall"
            android:text="@string/analysis_button_text" />
		<!-- 开启单机关键词推荐 -->
        <Button
            android:id="@+id/offline_recommend_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_button_text" />
		<!-- 查看推荐列表 -->
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="viewRecommondedList"
            android:text="@string/recommended_list_button_text" />
		<!-- 查看个人关键词分析 -->
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="viewKeyWordAnalysis"
            android:text="@string/keyword_analysis_button_text" />
    </LinearLayout>

</LinearLayout>